# socialmedia-renunganku-bigproject

./: .slugignore  README.md  package.json
admin/backend/: .env  Cargo.toml
admin/backend/src/: main.rs
admin/frontend/: angular.json  package-lock.json  package.json
backend/: .env.example  package-lock.json  package.json
backend/prisma/: schema.prisma
backend/src/: app.module.ts  main.ts
backend/src/auth/: auth.controller.ts  auth.module.ts  auth.service.ts
backend/src/bookmarks/: bookmarks.controller.ts  bookmarks.module.ts  bookmarks.service.ts
backend/src/comments/: comments.controller.ts  comments.module.ts  comments.service.ts  likes.controller.ts
backend/src/events/: events.gateway.ts
backend/src/follow/: follow.controller.ts  follow.module.ts  follow.service.ts
backend/src/likes/: likes.controller.ts  likes.module.ts  likes.service.ts
backend/src/mail/: mail.module.ts  mail.service.ts
backend/src/messages/: messages.controller.ts  messages.gateway.ts  messages.service.ts
backend/src/notifications/: notifications.controller.ts  notifications.gateway.ts  notifications.module.ts  notifications.service.ts
backend/src/onboarding/: onboarding.controller.ts  onboarding.module.ts  onboarding.service.ts
backend/src/posts/: posts.controller.ts  posts.module.ts  posts.service.ts
backend/src/prisma/: prisma.service.ts
backend/src/spaces/: spaces.module.ts  spaces.service.ts
backend/test/: likes.e2e-spec.ts  setup-e2e.ts
docker/: docker-compose.yml
docs/: DEPLOYMENT.md
frontend/: package-lock.json  package.json
(+416 files in other folders)
